Tue Aug 23 11:27:26 2011  Hiroshi Nakamura  <nahi@ruby-lang.org>

	* ext/zlib/zlib.c (gzfile_read_header): Ensure that each section of
	  gzip header is readable to avoid SEGV.

	* test/zlib/test_zlib.rb (test_corrupted_header): Test it.

Mon Aug 22 23:43:33 2011  CHIKANAGA Tomoyuki  <nagachika00@gmail.com>

	* sprintf.c (rb_str_format): add RB_GC_GUARD to prevent temporary
	  strings from GC.

Sun Aug 21 17:49:53 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* iseq.c (iseq_s_disasm): remove variable which is no longer used
	  since r33013.

Sun Aug 21 14:20:58 2011  Naohisa Goto  <ngotogenome@gmail.com>

	* configure.in: use LD_LIBRARY_PATH_64 on 64-bit Solaris.

Sat Aug 20 13:19:52 2011  Kazuki Tsujimoto  <kazuki@callcc.net>

	* iseq.c (iseq_s_disasm): fix a bug that may cause SEGV.

	* test/ruby/test_method.rb (test_body): add a test for the above change.

Sat Aug 20 10:43:24 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_read): return new string if nil
	  is explicitly given as a buffer ([Bug #5207]), otherwise set the
	  encoding.  also removed dead code.

Fri Aug 19 14:25:51 2011  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (proc_spawn_v, proc_spawn): should not wait the
	  spawned process.

	* process.c (proc_spawn_v): fix missing argument, and try with
	  /bin/sh only if failed with ENOEXEC.

Fri Aug 19 14:12:57 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (idle): raises a Net::IMAP::Error when the
	  connection is closed.  based on the patch by Hugo Barauna.
	  [Bug #5190] [ruby-core:38930]

Fri Aug 19 13:18:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* configure.in: defines _DARWIN_UNLIMITED_SELECT if the target_os
	  is darwin.

Fri Aug 19 13:14:00 2011  Kenta Murata  <mrkn@mrkn.jp>

	* thread.c: add a description for the behavior of select(2) on
	  Mac OS X 10.7 (Lion).

Fri Aug 19 11:28:58 2011  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb (msg_att): accepts extra space before ')'.